# chatbot

./: .env.example  .gitignore  README.md  pyproject.toml
apps/: streamlit_chat.py
docs/ignore/: default replies.md
docs/inbox/: B&Y - Price List.xlsx  faq.md
prompts/: system.md
src/chatbot/: __init__.py  __main__.py
src/chatbot/adapters/: system_clock.py
src/chatbot/adapters/channels/: whatsapp_meta.py
src/chatbot/adapters/embeddings/: gemini_embedder.py
src/chatbot/adapters/llm/: gemini_client.py
src/chatbot/adapters/persistence/: conversation_repository.py  engine.py  orm.py
src/chatbot/adapters/rag/: chunker.py  creole_script_heuristic.py  fasttext_language_gate.py  lance_vector_store.py  rewrite_language_decision.py
src/chatbot/adapters/rag/parsers/: __init__.py  markdown_parser.py  pdf_parser.py  registry.py  spreadsheet_parser.py
src/chatbot/application/: chat_service.py  ingest_service.py  rag_orchestrator.py  sync_service.py
src/chatbot/config/: settings.py
src/chatbot/domain/contracts/: __init__.py  clock.py  conversation_repository.py  embedder.py  llm_client.py  rewrite_language_gate.py  vector_store.py
src/chatbot/domain/models/: __init__.py  chunk.py  conversation.py  message.py
src/chatbot/interfaces/: __init__.py
src/chatbot/interfaces/api/: deps.py  error_handlers.py  main.py
tests/: conftest.py  test_api_chat.py  test_chat_service.py  test_creole_script_heuristic.py  test_lid_creole_sentence_probe.py  test_markdown_parser.py  test_rewrite_language_decision.py  test_sync_service.py  test_whatsapp_meta.py
(+2 files in other folders)
